plugins {
	id 'java'
	id 'application'
}

sourceSets {
	main {
		java {
			srcDir 'src'
		}

		resources {
			srcDir 'ui'
		}
	}
}

dependencies {
	implementation 'org.openjfx:javafx-controls:16:win'
	implementation 'org.openjfx:javafx-graphics:16:win'
	implementation 'org.openjfx:javafx-fxml:16:win'
	implementation 'org.openjfx:javafx-base:16:win'
	implementation 'org.fxmisc.richtext:richtextfx:0.10.6'
}

java {
	sourceCompatibility JavaVersion.VERSION_16
}

compileJava {
	options.compilerArgs.add('--enable-preview')
}

application {
	mainModule.set('ritzow.notes.desktop')
	mainClass.set('ritzow.notes.desktop.RunDesktop')
}

run {
	doLast {
		workingDir project.file('desktop')
	}

	jvmArgs.add('--enable-preview')
}